--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <title> Tenis Fronton </title>
     <title><%= productName %></title>
 
     <meta charset="utf-8">
@@ -9,6 +11,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
+    <title>Pagina Tenis Fronton </title>
     <link rel="icon" type="image/png" sizes="128x128" href="icons/pelotatenis.png">
 
 
