puntajes , home , juego

--- a/index.html
+++ b/index.html
@@ -1,5 +1,40 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+
+  <title> Tenis Fronton </title>
+  <title>
+    <%= productName %>
+  </title>
+
+  <meta charset="utf-8">
+  <meta name="description" content="<%= productDescription %>">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="msapplication-tap-highlight" content="no">
+  <meta name="viewport"
+    content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
+
+  <title>Pagina Tenis Fronton </title>
+  <link rel="icon" type="image/png" sizes="128x128" href="icons/pelotatenis.png">
+
+
+
+
+
+
+
+</head>
+
+<body>
+  <!-- quasar:entry-point -->
+</body>
+
+</html>
+
+
+<!--<!DOCTYPE html>
+<html>
   <head>
 
     <title> Tenis Fronton </title>
@@ -11,7 +46,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
-    
+
 
 
 
@@ -19,6 +54,6 @@
 
   </head>
   <body>
-    <!-- quasar:entry-point -->
+     quasar:entry-point
   </body>
-</html>
+</html>-->
